20220602 APP更新_添加雷達資訊與詳細系統資訊觀測_GPS未啟用

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/audio.mp3
+    - assets/BSD_alarm.wav
+    - assets/BSD_alarm_1.wav
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
